# python-project-83

./: .Makefile.swp  .env.sample  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: project3_test.yml
page_analyzer/: __init.py__  app.py  database.py  html.py  urls.py  validate.py
page_analyzer/templates/: base.html  index.html  url_id.html  urls.html
